## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = gnu dist-bzip2

D=	`date +%G%m%d.%H%M%S`

SUBDIRS = src support doc admin aprspass

EXTRA_DIST = aprsd.spec.in aprsd.spec config.guess config.sub install-sh \
	missing mkinstalldirs FAQ LICENSE README README.CVS bootstrap.sh

MAINTAINERCLEANFILES = configure aclocal.m4 Makefile.in Makefile \
	config.guess config.sub install-sh missing mkinstalldirs \
	aprsd.spec

ChangeLog::

