dnl Process this file with autoconf to produce a configure script.
AC_INIT(acinclude.m4)

AC_DEFINE_UNQUOTED(APRSDTOCALL, "APD220")
#AC_SUBST(APRSDTOCALL)
AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM

AM_INIT_AUTOMAKE(aprsd, [2.2.0])

dnl Generate the config header
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_CHECK_COMPILERS
APRSD_CHECK_THREADING
APRSD_MISC_TESTS
CHECK_AX25
CHECK_FHS

dnl Perform program name transformation
AC_ARG_PROGRAM

AC_OUTPUT(Makefile admin/Makefile doc/Makefile src/Makefile)
