bin_PROGRAMS = aprsd

aprsd_SOURCES = aprsd.cpp aprsd.h \
		aprsString.cpp aprsString.h \
		aprsdassert.h \
		ax25socket.cpp ax25socket.h \
		constant.h \
		cpqueue.cpp cpqueue.h \
		crc32.c crc.h \
		dupCheck.cpp dupCheck.h \
		aprsdexception.cpp aprsdexception.h \
		exceptionguard.cpp exceptionguard.h \
		history.cpp history.h \
		httpserver.cpp httppage.h \
		mic_e.cpp mic_e.h \
		mutex.cpp mutex.h \
		osdep.cpp osdep.h \
		queryResp.cpp queryResp.h \
		rf.cpp rf.h \
		serial.cpp serial.h \
		servers.cpp servers.h \
		sniptype.h \
		string.cpp string.hpp \
		utils.cpp utils.h \
		validate.cpp validate.h 

INCLUDES = -I$(top_srcdir)/src

