bin_PROGRAMS = aprsd

aprsd_SOURCES = aprsd.cpp aprsd.hpp \
		aprsString.cpp aprsString.hpp \
		aprsdassert.hpp \
		ax25socket.cpp ax25socket.hpp \
		configfile.cpp configfile.hpp \
		constant.hpp \
		cpqueue.cpp cpqueue.hpp \
		crc32.c crc.h \
		dupCheck.cpp dupCheck.hpp \
		aprsdexception.cpp aprsdexception.hpp \
		exceptionguard.cpp exceptionguard.hpp \
		history.cpp history.hpp \
		httpserver.cpp httppage.hpp \
		mic_e.cpp mic_e.hpp \
		mutex.cpp mutex.hpp \
		osdep.cpp osdep.hpp \
		queryResp.cpp queryResp.hpp \
		refcount.hpp \
		rf.cpp rf.hpp \
		regex.cpp regex.hpp \
		regeximpl.cpp regeximpl.hpp \
		regexresult.cpp regexresult.hpp \
		regexresultimpl.cpp regexresultimpl.hpp \
		regexsubresult.cpp regexsubresult.hpp \
		serial.cpp serial.hpp \
		servers.cpp servers.hpp \
		sniptype.h \
		string.cpp string.hpp \
		time.hpp \
		utils.cpp utils.hpp \
		validate.cpp validate.hpp 

INCLUDES = -I$(top_srcdir)/src

